--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -12,8 +12,8 @@
 		integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles/styles.css">
-	<!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -662,93 +662,109 @@
 
 
 	<div class="be-part-of-the-future-tech-revolution__general-container">
-		<div class="content-wrap gray-background ">
-			<div class="be-part-of-the-future-tech-revolution__head-container mobile-block">
-				<div class="be-part-of-the-future-tech-revolution__head-container_helper">
-					<div class="big-logo-helper d-flex ">
-						<div class=" big-logo ">
-							<img src=" sourse/img/logo.svg" alt="big-logo">
-						</div>
-						<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 d-flex">Learn, Connect,
-							and
-							Innovate
-						</div>
-					</div>
-					<div class="be-part-of-the-future-tech-revolution__title ">
-						<h2>Be Part of the Future Tech Revolution</h2>
-					</div>
-					<div class="be-part-of-the-future-tech-revolution__p ">
-						<p>Immerse yourself in the world of future technology. Explore our comprehensive resources.</p>
-					</div>
-				</div>
+<div class="content-wrap gray-background swiper-container2 ">
+	<div class="be-part-of-the-future-tech-revolution__head-container desktop-block d-flex">
+		<div class="be-part-of-the-future-tech-revolution__head-container_helper d-flex">
+			<div class="big-logo d-flex">
+				<img src="sourse/img/logo.svg" alt="logo">
 			</div>
-
-			<div class="be-part-of-the-future-tech-revolution__head-container desktop-block d-flex">
-				<div class="be-part-of-the-future-tech-revolution__head-container_helper d-flex">
-					<div class="big-logo d-flex">
-						<img src="sourse/img/logo.svg" alt="logo">
-					</div>
-					<div class="be-part-of-the-future-tech-revolution_nested-block">
-						<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 ">Learn, Connect, and
-							Innovate
-						</div>
-						<div class="be-part-of-the-future-tech-revolution__title ">
-							<h2>Be Part of the Future Tech Revolution</h2>
-						</div>
-						<div class="be-part-of-the-future-tech-revolution__p ">
-							<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
-								with fellow tech
-								enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.
-							</p>
-						</div>
-					</div>
+			<div class="be-part-of-the-future-tech-revolution_nested-block">
+				<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 ">Learn, Connect, and
+					Innovate
 				</div>
-			</div>
-
-			<div class="be-part-of-the-future-tech-revolution__body-container">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item">
-					<div
-						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-							<h5>Resource Access</h5>
-						</div>
-						<button class="btn btn__arrow-in-yellow-round"></button>
-					</div>
-					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
-						wide range of resources, including ebooks, whitepapers, reports.</div>
+				<div class="be-part-of-the-future-tech-revolution__title ">
+					<h2>Be Part of the Future Tech Revolution</h2>
 				</div>
-
-				<div class="be-part-of-the-future-tech-revolution__body-container_item">
-					<div
-						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-							<h5>Community Forum</h5>
-						</div>
-						<button class="btn btn__arrow-in-yellow-round"></button>
-					</div>
-					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
-						forum to discuss industry trends and collaborate with peers.</div>
-				</div>
-
-				<div class="be-part-of-the-future-tech-revolution__body-container_item">
-					<div
-						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-							<h5>Tech Events</h5>
-						</div>
-						<button class="btn btn__arrow-in-yellow-round"></button>
-					</div>
-					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
-						tech events, webinars and conferences to enhance your knowledge.</div>
+				<div class="be-part-of-the-future-tech-revolution__p ">
+					<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
+						with fellow tech
+						enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.
+					</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
+	<div class="be-part-of-the-future-tech-revolution__body-container swiper-wrapper">
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Resource Access</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
+				wide range of resources, including ebooks, whitepapers, reports.</div>
+		</div>
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Community Forum</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
+				forum to discuss industry trends and collaborate with peers.</div>
+		</div>
+
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Tech Events</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
+				tech events, webinars and conferences to enhance your knowledge.</div>
+		</div>
+
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Resource Access</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
+				wide range of resources, including ebooks, whitepapers, reports.</div>
+		</div>
+
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Community Forum</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
+				forum to discuss industry trends and collaborate with peers.</div>
+		</div>
+
+		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+					<h5>Tech Events</h5>
+				</div>
+				<button class="btn btn__arrow-in-yellow-round"></button>
+			</div>
+			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
+				tech events, webinars and conferences to enhance your knowledge.</div>
+		</div>
+	</div>
+	<div class="swiper-navigation">
+		<!-- Кнопки навігації -->
+		<div class="swiper-button-prev"></div>
+		<div class="swiper-button-next"></div>
+		<!-- Індикатор -->
+		<div class="swiper-pagination"></div>
+	</div>
+</div>
+	</div>
+
 	<footer>
-		<nav>
-			<nav class="desktop-block">
-				<ul class="footer-menu-home ">
+		<div class="content-wrap ">
+			<nav class="container-footer d-flex space-between">
+				<ul class="footer-menu footer-menu-home ">
 					Home
 					<li>
 						<a href="#">Features</a>
@@ -757,7 +773,7 @@
 						<a href="#">Blogs</a>
 					</li>
 					<li>
-						<a href="#">Resources <button>New</button></a>
+						<a href="#">Resources <button class="new">New</button></a>
 					</li>
 					<li>
 						<a href="#">Testimonials</a>
@@ -770,7 +786,7 @@
 					</li>
 				</ul>
 
-				<ul class="footer-menu-news ">
+				<ul class="footer-menu footer-menu-news ">
 					News
 					<li>
 						<a href="#">Trending Stories</a>
@@ -792,13 +808,13 @@
 					</li>
 				</ul>
 
-				<ul class="footer-menu-podcast ">
+				<ul class="footer-menu footer-menu-podcast ">
 					Podcasts
 					<li>
 						<a href="#">AI Revolution</a>
 					</li>
 					<li>
-						<a href="#">AI Revolution <button>New</button></a>
+						<a href="#">AI Revolution <button class="new">New</button></a>
 					</li>
 					<li>
 						<a href="#">Resources </a>
@@ -811,7 +827,7 @@
 					</li>
 				</ul>
 
-				<ul class="footer-menu-blogs ">
+				<ul class="footer-menu footer-menu-blogs ">
 					Blogs
 					<li>
 						<a href="#">Quantum Computing</a>
@@ -823,7 +839,7 @@
 						<a href="#">Space Exploration </a>
 					</li>
 					<li>
-						<a href="#">Biotechnology<button>New</button></a>
+						<a href="#">Biotechnology<button class="new">New</button></a>
 					</li>
 					<li>
 						<a href="#">Renewable Energy</a>
@@ -832,25 +848,38 @@
 						<a href="#">Biohacking</a>
 					</li>
 				</ul>
-			</nav>
 
-			<nav class="mobile-block">
-				<ul class="footer-menu ">
+				<ul class="footer-menu footer-menu-btn footer-menu-resources">
+					<div>Resources</div>
 					<li>
-						<a href="#">Home</a>
+						<div class="footer-menu-btn_item  ">
+							Whitepapers
+							<button class="btn btn__yellow-arrow"></button>
+						</div>
 					</li>
 					<li>
-						<a href="#">News</a>
+						<div class="footer-menu-btn_item">
+							Ebooks
+							<button class="btn btn__yellow-arrow"></button>
+						</div>
 					</li>
 					<li>
-						<a href="#">Podcasts</a>
+						<div class="footer-menu-btn_item">
+							Reports
+							<button class="btn btn__yellow-arrow"></button>
+						</div>
 					</li>
 					<li>
-						<a href="#">Resources</a>
+						<div class="footer-menu-btn_item">
+							Research Papers
+							<button class="btn btn__yellow-arrow"></button>
+						</div>
 					</li>
 				</ul>
 			</nav>
-			<nav></nav>
+		</div>
+
+		<nav></nav>
 	</footer>
 
 
