--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html
@@ -13,7 +13,7 @@
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -662,103 +662,109 @@
 
 
 	<div class="be-part-of-the-future-tech-revolution__general-container">
-<div class="content-wrap gray-background swiper-container2 ">
-	<div class="be-part-of-the-future-tech-revolution__head-container desktop-block d-flex">
-		<div class="be-part-of-the-future-tech-revolution__head-container_helper d-flex">
-			<div class="big-logo d-flex">
-				<img src="sourse/img/logo.svg" alt="logo">
+		<div class="content-wrap gray-background swiper-container2 ">
+			<div class="be-part-of-the-future-tech-revolution__head-container desktop-block d-flex">
+				<div class="be-part-of-the-future-tech-revolution__head-container_helper d-flex">
+					<div class="big-logo d-flex">
+						<img src="sourse/img/logo.svg" alt="logo">
+					</div>
+					<div class="be-part-of-the-future-tech-revolution_nested-block">
+						<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 ">Learn, Connect, and
+							Innovate
+						</div>
+						<div class="be-part-of-the-future-tech-revolution__title ">
+							<h2>Be Part of the Future Tech Revolution</h2>
+						</div>
+						<div class="be-part-of-the-future-tech-revolution__p ">
+							<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
+								with fellow tech
+								enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="be-part-of-the-future-tech-revolution_nested-block">
-				<div class="be-part-of-the-future-tech-revolution__under-title under-title_h2 ">Learn, Connect, and
-					Innovate
-				</div>
-				<div class="be-part-of-the-future-tech-revolution__title ">
-					<h2>Be Part of the Future Tech Revolution</h2>
-				</div>
-				<div class="be-part-of-the-future-tech-revolution__p ">
-					<p>Immerse yourself in the world of future technology. Explore our comprehensive resources, connect
-						with fellow tech
-						enthusiasts, and drive innovation in the industry. Join a dynamic community of forward-thinkers.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<div class="be-part-of-the-future-tech-revolution__body-container swiper-wrapper">
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Resource Access</h5>
+			<div class="be-part-of-the-future-tech-revolution__body-container swiper-wrapper">
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Resource Access</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
+						wide range of resources, including ebooks, whitepapers, reports.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
-			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
-				wide range of resources, including ebooks, whitepapers, reports.</div>
-		</div>
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Community Forum</h5>
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Community Forum</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
+						forum to discuss industry trends and collaborate with peers.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
-			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
-				forum to discuss industry trends and collaborate with peers.</div>
-		</div>
 
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Tech Events</h5>
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Tech Events</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
+						tech events, webinars and conferences to enhance your knowledge.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
-			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
-				tech events, webinars and conferences to enhance your knowledge.</div>
-		</div>
 
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Resource Access</h5>
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Resource Access</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
+						wide range of resources, including ebooks, whitepapers, reports.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
-			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Visitors can access a
-				wide range of resources, including ebooks, whitepapers, reports.</div>
-		</div>
 
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Community Forum</h5>
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Community Forum</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
+						forum to discuss industry trends and collaborate with peers.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
-			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Join our active community
-				forum to discuss industry trends and collaborate with peers.</div>
-		</div>
 
-		<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
-			<div class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
-				<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
-					<h5>Tech Events</h5>
+				<div class="be-part-of-the-future-tech-revolution__body-container_item swiper-slide">
+					<div
+						class="be-part-of-the-future-tech-revolution__body-container-helper d-flex space-between align-center">
+						<div class="be-part-of-the-future-tech-revolution__body-container_item-title">
+							<h5>Tech Events</h5>
+						</div>
+						<button class="btn btn__arrow-in-yellow-round"></button>
+					</div>
+					<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
+						tech events, webinars and conferences to enhance your knowledge.</div>
 				</div>
-				<button class="btn btn__arrow-in-yellow-round"></button>
 			</div>
-			<div class="be-part-of-the-future-tech-revolution__body-container_item-content">Stay updated on upcoming
-				tech events, webinars and conferences to enhance your knowledge.</div>
+			<div class="swiper-navigation">
+				<!-- Кнопки навігації -->
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+				<!-- Індикатор -->
+				<div class="swiper-pagination"></div>
+			</div>
 		</div>
-	</div>
-	<div class="swiper-navigation">
-		<!-- Кнопки навігації -->
-		<div class="swiper-button-prev"></div>
-		<div class="swiper-button-next"></div>
-		<!-- Індикатор -->
-		<div class="swiper-pagination"></div>
-	</div>
-</div>
 	</div>
 
 	<footer>
