--- a/index.html
+++ b/index.html
@@ -288,11 +288,11 @@
                 </div>
                  <div>
                   <span class="title_task d-block">Завдання : "Фінальний проєкт"</span>
-                  <a href="my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html" class="btn">Фінальний проєкт</a>
+                  <a href="my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html" class="btn btn_important">Фінальний проєкт</a>
                 </div>
                  <div>
                   <span class="title_task d-block">For fun : "Spotter" v.1.0</span>
-                  <a href="my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/index.html" class="btn"> "Споттер" v.1.0</a>
+                  <a href="my_works/MyProject/Spotter_v.1.0/index.html" class="btn btn_important"> "Споттер" v.1.0</a>
                 </div>
               </li>
             </ul>
