--- a/index.html
+++ b/index.html
@@ -294,6 +294,10 @@
                   <span class="title_task d-block">For fun : "Spotter" v.1.0</span>
                   <a href="my_works/MyProject/Spotter_v.1.0/index.html" class="btn btn_important"> "Споттер" v.1.0</a>
                 </div>
+                <div>
+                  <span class="title_task d-block">For fun : "Spotter" v.1.1</span>
+                  <a href="my_works/MyProject/Spotter_v.1.1/index.html" class="btn btn_important"> "Споттер" v.1.1</a>
+                </div>
               </li>
             </ul>
           </div>
