--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
                   <span class="title_task d-block">For fun : "Spotter" v.1.1</span>
                   <a href="my_works/MyProject/Spotter_v.1.1/index.html" class="btn btn_important"> "Споттер" v.1.1</a>
                 </div>
+                <div>
+                  <span class="title_task d-block">For fun : "Spotter" v.1.1</span>
+                  <a href="my_works/MyProject/Spotter_v.1.1/index.html" class="btn btn_important"> "Споттер" v.1.2</a>
+                </div>
               </li>
             </ul>
           </div>
@@ -306,3 +310,4 @@
     </div>
   </body>
 </html>
+
